--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,27 +1,5 @@
-:root {
-  --key-height: 80px;
-  --key-width: 80px;
-  --key-margin: 8px;
-  --key-pos-x: calc(var(--key-width) + var(--key-margin));
-  --key-pos-y: calc(var(--key-height) + var(--key-margin));
-  --keyboard-width: calc(var(--key-width) * 6 + var(--key-margin) * 8);
-  --keyboard-height: calc(var(--key-height) * 4.5 + var(--key-margin) * 3);
-
-  --keyboard-top: max(0px, calc(50vh - var(--keyboard-height) * 0.6));
-  --keyboard-left: max(0px, calc(50vw - var(--keyboard-width) * 0.5));
-  --color-mod: #00AB59;
-}
-
 body {
-  /*background-color:black;*/
-  font-family:'Inter';
 }
-.keyboard {
-  display: block;
-  height: 90%;
-  width: 100%;
-  }
-
 .controls {
   color:rgb(30, 30, 30);
   padding-left:2px;
@@ -43,64 +21,23 @@ body {
 .control.save, .control.reset {
   display:none;
 }
-.keyboard.connected .control.save, .keyboard.connected .control.reset {
+.control.save, .control.reset {
   display:inline-block;
 }
 
-.key {
-  position:absolute;
-  display:block;
-  width:var(--key-width);
-  height:var(--key-height);
-  border-radius:8px;
-  background-color:#1B1B1B;
-  opacity:0.5;
-  transition:opacity 1s;
-}
-.keyboard.connected .held {
-  background-color:#183E2C;
+.keyboard 
+{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.keycode {
-  color:white;
-  font-size:24px;
-
-  position:absolute;
-  top:24px;
-  text-align:center;
-  width:100%;
-  cursor:pointer;
-  display:none;
-}
-
-.keycode:hover {
-  text-decoration:underline;
-}
-
-.keycode.mod {
-  color:var(--color-mod);
-}
-.keycode.small {
-  top:30px;
-  font-size:16px;
-}
-.alt {
-  color:var(--color-mod);
-  font-size:12px;
-  text-align:right;
-
-  position:absolute;
-  top:7px;
-  right:7px;
-  cursor:pointer;
-  display:none;
-}
-.alt:hover {
-  text-decoration:underline;
-}
-
-.keyboard.connected .keycode, .keyboard.connected .alt {
-  display:block;
+.key 
+{
+  display: flex;
+  gap: 10px;
+  background-color: grey;
+  border-radius: 5px;
 }
 
 .keyCodeLabel
